@@ -1,4 +1,4 @@
 bin_PROGRAMS  = udcli
 udcli_SOURCES = udcli.c
-udcli_CFLAGS  = -I$(top_srcdir)/libudis86
+udcli_CFLAGS  = -I$(top_srcdir)/libudis86 -I$(top_srcdir)
 udcli_LDADD   = ../libudis86/libudis86.la
